--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,3 @@
-.header {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: orange;
-}
-
 .header ul {
     list-style-type: none;
     padding: 0;
@@ -15,18 +10,23 @@
     display: block;
     padding: 10px;
     background-color: #4aaaa5;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .header a:hover {
     background-color: #555;
 }
 
-@media screen and (min-width: 768px){
     .header ul{
         display: flex;
     }
 
-    .header li{
-        flex: 1 1 0;
+    .name-menu {
+        justify-content: flex-start;
     }
+    
+    .rest-of-menu {
+        justify-content: flex-end;
+    }
+    
 }
