--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+.container {
+    width: 90%;
+    max-width: 1160px;
+    margin: 0 auto;
+}
+
 header {
     background-color: #ffffff;
 }
@@ -21,17 +27,16 @@ h2:after {
 body {
     background-image: url(../images/interlaced.png);
     color: #777777;
-}
-
-.wrapper {
-    width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
+    width: 90%;
 }
 
 footer {
-    padding: 5px 0;
-    margin: 5px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+    /* padding: 5px 0;
+    margin: 5px; */
     text-align: center;
     background-color: #111111;
     text-decoration: none;
@@ -49,7 +54,8 @@ footer {
 
 nav ul{
     list-style-type: none;
-    padding: 0;
+    margin: 0px;
+    /* padding: 10px; */
 }
 
 nav a{
@@ -64,10 +70,12 @@ nav a{
 .name-header{
     font-size: 21.5px;
     background: #4aaaa5;
+    padding: 10px;
 }
 
 nav >.name-header a {
     color: #ffffff;
+
 }
 
 .links{
