linked portfolio.html and contact.html to the index.  Contined styling the header on index.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,8 +78,10 @@ nav >.name-header a {
 
 }
 
-.links{
-    
+nav >.links{
+    display: flex;
+    justify-content: center;
+    align-self: center;
 }
 
 nav >.links a {
@@ -100,7 +102,21 @@ nav a:hover {
     }
 
     nav li{
-        flex: 1
+        flex: 1;
+    }
+
+    nav li:not(:first-child):before {
+        content: ' | ';
+        font-size: 26px;
+        position: absolute;
+        
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        /* right: -2px; */
+        /* top: 25%; */
+        /* width: 2px; */
+        /* height: 50%; */
     }
 
         nav {
