--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 .container {
     width: 90%;
-    max-width: 1160px;
+    max-width: 960px;
     margin: 0 auto;
 }
 
@@ -24,28 +24,37 @@ h2:after {
     border: .5px solid #cccccc;
 }
 
+.my-photo {
+    padding-right: 20px;
+    padding-bottom: 10px;
+}
+
 body {
     background-image: url(../images/interlaced.png);
     color: #777777;
     width: 90%;
 }
 
+footer:before{
+    content:' ';
+    display: block;
+    border: 3px solid #4aaaa5;
+}
+
 footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
-    /* padding: 5px 0;
-    margin: 5px; */
+    height: 3.5rem;
     text-align: center;
-    background-color: #111111;
+    vertical-align: baseline;
+    background-color: #3b3b3b;
     text-decoration: none;
     color: #ffffff;
   }
 
 .social > li {
     display: inline-block;
-    /* margin: 0 5px; */
   }
 
 
