--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,12 @@ header:after {
     border: .5px solid #cccccc;
 }
 
+.main-content-wrapper {
+    width: 960px;
+    margin: 50px;
+    background-color: #ffffff
+}
+
 h2 {
     color:#4aaaa5;
 }
@@ -118,6 +124,7 @@ nav a:hover {
         content: ' | ';
         font-size: 26px;
         position: absolute;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         
         text-align: center;
         justify-content: center;
