--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,7 @@ header:after {
     width: 960px;
     margin: 50px;
     background-color: #ffffff
+    /* padding: 50px 50px 50px 50px; */
 }
 
 h2 {
@@ -143,5 +144,25 @@ nav a:hover {
 
 }
 
+
+
+/* Contact page field formatting */
+
+form {
+    padding: 1em;
+    width: 300px;
+}
     
-    
+form div + div {
+    margin-top: 1em;
+  }
+
+button {
+    background-color: #4aaaa5;
+    color: #ffffff;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    font-size: 12pt;
+}
