--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,13 +16,18 @@ header:after {
 
 .main-content-wrapper {
     width: 960px;
-    margin: 50px;
-    background-color: #ffffff
+    margin: auto;
+    background-color: #ffffff;
+    height: 500px;
+    /* padding: 20px 20px 20px 20px; */
+    margin-top: 40px;
     /* padding: 50px 50px 50px 50px; */
 }
 
 h2 {
     color:#4aaaa5;
+    padding-left: 20px;
+    padding-top: 10px;
 }
 
 h2:after {
@@ -34,6 +39,7 @@ h2:after {
 .my-photo {
     padding-right: 20px;
     padding-bottom: 10px;
+    padding-left: 20px;
 }
 
 body {
@@ -165,27 +171,7 @@ button {
     padding-top: 7px;
     padding-bottom: 7px;
     font-size: 12pt;
-}
-
-
-/* Portfolio page formatting */
-
-.portfolio-wrapper {
-    position: relative;
-    text-align: center;
-    color: red;
-}
-
-.container-1 {
-    display: flex;
-}
-
-.text-block-1  {
-    position: absolute;
-    background-color: #4aaaa5;
-    color: #ffffff;
-    text-align: center;
-    justify-content: center;
+    cursor: pointer;
 }
 
 #name {
@@ -209,3 +195,38 @@ button {
    padding-bottom: 75px;
    padding-top: 5px;
 }
+
+
+
+/* Portfolio page formatting */
+
+ .portfolio-wrapper {
+    position: relative; 
+    color: red;
+ 
+    align-self: auto;
+    overflow: auto;
+} 
+
+containers-portfolio {
+    position: relative;
+}
+
+.container-1 {
+    display: flex;
+
+}
+
+h3 {
+
+    position: absolute; 
+    align-self: auto;
+    overflow: auto;
+    /* display: flex; */
+    background-color: #4aaaa5;
+    color: #ffffff;
+    text-align: center;
+    /* justify-content: right; */
+    width: 300px;
+}
+
