--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,7 @@ nav a{
     font-size: 21.5px;
     background: #4aaaa5;
     padding: 10px;
+    text-align: center;
 }
 
 nav >.name-header a {
@@ -252,4 +253,11 @@ button {
     margin-right: 25px;
   }
 
-
+  html,body
+  {
+      width: 100%;
+      height: 100%;
+      margin: 0px;
+      padding: 0px;
+      overflow-x: hidden; 
+  }
